# rss_agregator_news

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  index.html  main.cpp
XMLItem/: XMLItem.cpp  XMLItem.h
config/: rss_sources.json
controllers/: NewsController.cpp  NewsController.h
data/: RSSFetcher.cpp  RSSFetcher.h
docs/: diagrams.puml
exceptions/: ConfigLoadException.h  NotFoundException.h  ParseException.h
models/XMLItem/: XMLItem.cpp  XMLItem.h
services/: INewsService.h  NewsService.cpp  NewsService.h  RSSService.cpp  RSSService.h
utils/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
utils/CurlWrapper/: CurlWrapper.cpp  CurlWrapper.h
